--- a/Join Us/join.html
+++ b/Join Us/join.html
@@ -17,12 +17,11 @@
               <a href="./index.html" ><img src="../assets/bba-logo.png" alt="Logo"></a>
             </div>
             <ul class="navbar-menu">
-              <li><a href="./About Us/about.html"><button>About Us</button></a></li>
-              <li><a href="./Impact/impact.html"><button>Impact</button></a></li>
-              <li><a href="./Services/services.html"><button>Services</button></a></li>
-              <li><a href="./Donate/donate.html"><button>Donate</button></a></li>
-              <li><a href="./Join Us/join.html"><button>Join Us</button></a></li>
-              <li><a href="./Contact Us/contact.html"><button>Contact Us</button></a></li>
+              <li><a href="../About Us/about.html"><button>About Us</button></a></li>
+              <li><a href="../Impact/impact.html"><button>Impact</button></a></li>
+              <li><a href="../Services/services.html"><button>Services</button></a></li>
+              <li><a href="../Donate/donate.html"><button>Donate</button></a></li>
+              <li><a href="../Contact Us/contact.html"><button>Contact Us</button></a></li>
             </ul>
           </nav>
     </header>
