--- a/Join Us/join.html
+++ b/Join Us/join.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar">
             <div class="navbar-logo">
-              <a href="./index.html" ><img src="../assets/bba-logo.png" alt="Logo"></a>
+              <a href="../index.html" ><img src="../assets/bba-logo.png" alt="Logo"></a>
             </div>
             <ul class="navbar-menu">
               <li><a href="../About Us/about.html"><button>About Us</button></a></li>
