--- a/About Us/about.html
+++ b/About Us/about.html
@@ -16,7 +16,7 @@
         <nav class="navbar">
             <!-- Logo Section -->
             <div class="navbar-logo">
-                <a href="./index.html"><img src="../assets/bba-logo.png" alt="Logo"></a>
+                <a href="../index.html"><img src="../assets/bba-logo.png" alt="Logo"></a>
             </div>
             
             <!-- Mobile Hamburger Icon (for mobile view) -->
@@ -28,12 +28,11 @@
 
             <!-- Navbar Menu -->
             <ul class="navbar-menu">
-                <li><a href="./About Us/about.html"><button>About Us</button></a></li>
-                <li><a href="./Impact/impact.html"><button>Impact</button></a></li>
-                <li><a href="./Services/services.html"><button>Services</button></a></li>
-                <li><a href="./Donate/donate.html"><button>Donate</button></a></li>
-                <li><a href="./Join Us/join.html"><button>Join Us</button></a></li>
-                <li><a href="./Contact Us/contact.html"><button>Contact Us</button></a></li>
+                <li><a href="../Impact/impact.html"><button>Impact</button></a></li>
+                <li><a href="../Services/services.html"><button>Services</button></a></li>
+                <li><a href="../Donate/donate.html"><button>Donate</button></a></li>
+                <li><a href="../Join Us/join.html"><button>Join Us</button></a></li>
+                <li><a href="../Contact Us/contact.html"><button>Contact Us</button></a></li>
             </ul>
         </nav>
     </header>
