--- a/Mission/mission.html
+++ b/Mission/mission.html
@@ -16,6 +16,13 @@
             <div class="navbar-logo">
               <a href="../index.html" ><img src="../assets/bba-logo.png" alt="Logo"></a>
             </div>
+                        <!-- Mobile Hamburger Icon (for mobile view) -->
+            <div class="hamburger-menu" id="navbarToggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            
             <ul class="navbar-menu">
               <li><a href="../About Us/about.html"><button>About Us</button></a></li>
               <li><a href="../Impact/impact.html"><button>Impact</button></a></li>
