--- a/index.html
+++ b/index.html
@@ -52,18 +52,18 @@
     <section class="sponsors-partners">
         <h2>OUR SPONSORS</h2>
         <div class="logo-container">
-          <img src="./assets/bba-logo.png" alt="Sponsor 1 Logo">
-          <img src="./assets/bba-logo.png" alt="Sponsor 2 Logo">
-          <img src="./assets/bba-logo.png" alt="Sponsor 3 Logo">
+          <a href=""><img src="./assets/add-on.png" alt="Sponsor 1 Logo"></a>
+          <a href=""><img src="./assets/hack-club.png" alt="Sponsor 2 Logo"></a>
+          <a href=""><img src="./assets/add-on.png" alt="Sponsor 3 Logo"></a>
         </div>
 
         <br>
       
         <h2>OUR PARTNERS</h2>
         <div class="logo-container">
-          <img src="./assets/bba-logo.png" alt="Partner 1 Logo">
-          <img src="./assets/bba-logo.png" alt="Partner 2 Logo">
-          <img src="./assets/bba-logo.png" alt="Partner 3 Logo">
+          <a href=""><img src="./assets/add-on.png" alt="Partner 1 Logo"></a>
+          <a href=""><img src="./assets/stem-all.png" alt="Partner 2 Logo"></a>
+          <a href=""><img src="./assets/add-on.png" alt="Partner 3 Logo"></a>
         </div>
 
         <br><br><br><br>
