--- a/About Us/about.html
+++ b/About Us/about.html
@@ -156,7 +156,7 @@
                                 </p>
                     <div class="social-icons">
                         <a href="https://www.instagram.com/dhruv_janakala/" class="social-icon"><img src="../assets/instagram.jpeg" alt="Instagram"></a>
-                        <a href="www.linkedin.com/in/dhruv-janakala/" class="social-icon"><img src="../assets/linkedin.png" alt="LinkedIn"></a>
+                        <a href="https://www.linkedin.com/in/dhruv-janakala/" class="social-icon"><img src="../assets/linkedin.png" alt="LinkedIn"></a>
                     </div>
                 </div>
                    <!-- Card 7 -->
