--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <a href="./Mission/mission.html"><button id="missionBtn" class="alta">OUR MISSION</button></a>
             </div>
             <div class="right-content">
-                <img src="./assets/bba-logo.png" alt="Image of a pipette" class="image-responsive">
+                <img src="./assets/dropper-image.png" alt="Image of Science" class="image-responsive">
             </div>
         </div>
     </main>
@@ -52,9 +52,9 @@
     <section class="sponsors-partners">
         <h2>OUR SPONSORS</h2>
         <div class="logo-container">
-          <a href=""><img src="./assets/add-on.png" alt="Sponsor 1 Logo"></a>
+          <a href=""><img src="./assets/sponsor-welcome.jpeg" alt="Sponsor 1 Logo"></a>
           <a href=""><img src="./assets/hack-club.png" alt="Sponsor 2 Logo"></a>
-          <a href=""><img src="./assets/add-on.png" alt="Sponsor 3 Logo"></a>
+          <a href=""><img src="./assets/become-sponsor.jpeg" alt="Sponsor 3 Logo"></a>
         </div>
 
         <br>
