--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <li><a href="https://www.linkedin.com/company/biobizz-academy/posts/?feedView=all"><img src="./assets/linkedin.png" alt="LinkedIn"></a></li>
                     <li><a href="https://www.instagram.com/biobizz.official/"><img src="./assets/instagram.jpeg" alt="Instagram"></a></li>
                     <li><a href="https://github.com/BioBizz-Academy"><img src="./assets/github.png" alt="Github"></a></li>
-                    <li><a href="#"><img src="./assets/linktree.png" alt="Linktree"></a></li>
+                    <li><a href="https://linktr.ee/bbacademy24"><img src="./assets/linktree.png" alt="Linktree"></a></li>
                     <li><a href="#"><img src="./assets/peerlist.png" alt="Peerlist"></a></li>
                 </ul>
             </div>
