--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
     <section class="sponsors-partners">
         <h2>OUR SPONSORS</h2>
         <div class="logo-container">
-          <a href=""><img src="./assets/sponsor-welcome.jpeg" alt="Sponsor 1 Logo"></a>
-          <a href=""><img src="./assets/hack-club.png" alt="Sponsor 2 Logo"></a>
-          <a href=""><img src="./assets/become-sponsor.jpeg" alt="Sponsor 3 Logo"></a>
+          <a href=""><img src="./assets/images/sponsors/sponsor-welcome.jpeg" alt="Sponsor 1 Logo"></a>
+          <a href=""><img src="./assets/images/sponsors/hack-club.png" alt="Sponsor 2 Logo"></a>
+          <a href=""><img src="./assets/images/sponsors/become-sponsor.jpeg" alt="Sponsor 3 Logo"></a>
         </div>
         <br>
         <h2>OUR PARTNERS</h2>
         <div class="logo-container">
-          <a href=""><img src="./assets/add-on.png" alt="Partner 1 Logo"></a>
-          <a href=""><img src="./assets/stem-all.png" alt="Partner 2 Logo"></a>
-          <a href=""><img src="./assets/add-on.png" alt="Partner 3 Logo"></a>
+          <a href=""><img src="./assets/images/partners/add-on.png" alt="Partner 1 Logo"></a>
+          <a href=""><img src="./assets/images/partners/stem-all.png" alt="Partner 2 Logo"></a>
+          <a href=""><img src="./assets/images/partners/add-on.png" alt="Partner 3 Logo"></a>
         </div>
         <br><br><br><br>
     </section>
@@ -73,11 +73,11 @@
             </div>
             <div class="footer-right">
                 <ul class="social-icons">
-                    <li><a href="https://www.linkedin.com/company/biobizz-academy/posts/?feedView=all"><img src="./assets/linkedin.png" alt="LinkedIn"></a></li>
-                    <li><a href="https://www.instagram.com/biobizz.official/"><img src="./assets/instagram.jpeg" alt="Instagram"></a></li>
-                    <li><a href="https://github.com/BioBizz-Academy"><img src="./assets/github.png" alt="Github"></a></li>
-                    <li><a href="https://linktr.ee/bbacademy24"><img src="./assets/linktree.png" alt="Linktree"></a></li>
-                    <li><a href="#"><img src="./assets/peerlist.png" alt="Peerlist"></a></li>
+                    <li><a href="https://www.linkedin.com/company/biobizz-academy/posts/?feedView=all"><img src="./assets/images/footer/linkedin.png" alt="LinkedIn"></a></li>
+                    <li><a href="https://www.instagram.com/biobizz.official/"><img src="./assets/images/footer/instagram.jpeg" alt="Instagram"></a></li>
+                    <li><a href="https://github.com/BioBizz-Academy"><img src="./assets/images/footer/github.png" alt="Github"></a></li>
+                    <li><a href="https://linktr.ee/bbacademy24"><img src="./assets/images/footer/linktree.png" alt="Linktree"></a></li>
+                    <li><a href="#"><img src="./assets/images/footer/peerlist.png" alt="Peerlist"></a></li>
                 </ul>
             </div>
         </div>
