--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
     <section class="sponsors-partners">
         <h2>OUR SPONSORS</h2>
         <div class="logo-container">
-          <a href=""><img src="./assets/images/sponsors/sponsor-welcome.jpeg" alt="Sponsor 1 Logo"></a>
-          <a href=""><img src="./assets/images/sponsors/hack-club.png" alt="Sponsor 2 Logo"></a>
-          <a href=""><img src="./assets/images/sponsors/become-sponsor.jpeg" alt="Sponsor 3 Logo"></a>
+          <a href=""><img src="./assets/images/sponsors/sponsors1.jpeg" alt="Sponsor 1 Logo"></a>
+          <a href=""><img src="./assets/images/sponsors/stem-all.png" alt="Sponsor 2 Logo"></a>
+          <a href=""><img src="./assets/images/sponsors/add-on.jpeg" alt="Sponsor 3 Logo"></a>
         </div>
         <br>
         <h2>OUR PARTNERS</h2>
         <div class="logo-container">
-          <a href=""><img src="./assets/images/partners/add-on.png" alt="Partner 1 Logo"></a>
-          <a href=""><img src="./assets/images/partners/stem-all.png" alt="Partner 2 Logo"></a>
+          <a href=""><img src="./assets/images/partners/hack-club.png" alt="Partner 1 Logo"></a>
+          <a href=""><img src="./assets/images/partners/partners2.jpeg" alt="Partner 2 Logo"></a>
           <a href=""><img src="./assets/images/partners/add-on.png" alt="Partner 3 Logo"></a>
         </div>
         <br><br><br><br>
