--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="logo-container">
           <a href=""><img src="./assets/images/sponsors/sponsors1.jpeg" alt="Sponsor 1 Logo"></a>
           <a href=""><img src="./assets/images/sponsors/stem-all.png" alt="Sponsor 2 Logo"></a>
-          <a href=""><img src="./assets/images/sponsors/add-on.jpeg" alt="Sponsor 3 Logo"></a>
+          <a href=""><img src="./assets/images/sponsors/add-on.png" alt="Sponsor 3 Logo"></a>
         </div>
         <br>
         <h2>OUR PARTNERS</h2>
