--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
             </div>
             
             <ul class="navbar-menu">
-              <li><a href="./About Us/about.html"><button>About Us</button></a></li>
-              <li><a href="./Impact/impact.html"><button>Impact</button></a></li>
-              <li><a href="./Services/services.html"><button>Services</button></a></li>
+              <li><a href="./About Us/about-page.html"><button>About Us</button></a></li>
+              <li><a href="./Impact/impact-page.html"><button>Impact</button></a></li>
+              <li><a href="./Services/services-page.html"><button>Services</button></a></li>
               <li><a href="https://hcb.hackclub.com/donations/start/biobizz-academy"><button>Donate</button></a></li>
-              <li><a href="./Join Us/join.html"><button>Join Us</button></a></li>
-              <li><a href="./Contact Us/contact.html"><button>Contact Us</button></a></li>
+              <li><a href="./Join Us/join-page.html"><button>Join Us</button></a></li>
+              <li><a href="./Contact Us/contact-page.html"><button>Contact Us</button></a></li>
             </ul>
           </nav>
     </header>
