--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
         <h2>OUR SPONSORS</h2>
         <div class="logo-container">
           <a href=""><img src="./assets/images/sponsors/sponsors1.jpeg" alt="Sponsor 1 Logo"></a>
-          <a href=""><img src="./assets/images/sponsors/stem-all.png" alt="Sponsor 2 Logo"></a>
+          <a href="https://www.stemall.org/"><img src="./assets/images/sponsors/stem-all.png" alt="Sponsor 2 Logo"></a>
           <a href=""><img src="./assets/images/sponsors/add-on.png" alt="Sponsor 3 Logo"></a>
         </div>
         <br>
         <h2>OUR PARTNERS</h2>
         <div class="logo-container">
-          <a href=""><img src="./assets/images/partners/hack-club.png" alt="Partner 1 Logo"></a>
+          <a href="https://hackclub.com/"><img src="./assets/images/partners/hack-club.png" alt="Partner 1 Logo"></a>
           <a href=""><img src="./assets/images/partners/partners2.jpeg" alt="Partner 2 Logo"></a>
           <a href=""><img src="./assets/images/partners/add-on.png" alt="Partner 3 Logo"></a>
         </div>
